# VendOS

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  lv_conf.h  package-lock.json  package.json
.github/workflows/: linux.yml  macos.yml  windows.yml
electron/src/с/print/: printer.c
electron/src/с/screens/: screen1.h  screen2.h  screen3.h
src/: App.tsx  main.c
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/cpp/: sony_bridge.cc  sony_bridge.hpp
src-tauri/libs/include/CRSDK/: ._CrDefines.h  CrDefines.h  IDeviceCallback.h
src-tauri/libs/windows/x64/: Cr_Core.lib
src-tauri/src/: lib.rs  main.rs  sony_bridge.rs
src/print/: printer.h
src/screens/: screen1.c  screen1.h  screen2.c  screen2.h  screen3.c  screen3.h
